manifests/network-policy-allow-from-todo.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-todo
  namespace: database
  podSelector: {}
  ingress:
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - podSelector:
            matchLabels:
              app: todo
          namespaceSelector:
            matchLabels:
              name: app
  policyTypes:
    - Ingress
